Add eth calculation and rename denom to BTSG

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
-REST_API_ENDPOINT=https://lcd-juno.itastakers.com/
-RPC_ENDPOINT=https://rpc-juno.itastakers.com/
+REST_API_ENDPOINT=https://lcd.explorebitsong.com/
+RPC_ENDPOINT=https://rpc.explorebitsong.com/
 VESTING_ACCOUNTS=<comma-sepparate-list-of-vesting-account-addresses>
+ETHERSCAN_KEY=
+ERC20_CONTRACT=0x05079687d35b93538cbd59fe5596380cae9054a9
+ETHERSCAN_ENDPOINT=https://api.etherscan.io/api
